Edit first h2 text of all recipe pages dorowet.htm kitfo.htm shirowet.htm

--- a/recipes/dorowet.html
+++ b/recipes/dorowet.html
@@ -13,7 +13,7 @@
         <p>Doro wat is a richly spiced, fragrant, and delicious chicken-and-egg stew from Ethiopia and Eritrea.  The chicken cooks in a flavour-rich base of slow-cooked onions, berbere, niter kibbeh (spiced clarified butter), ginger, and garlic. Hard-boiled eggs go in towards the end for a protein-rich and delightfully low-cost meal fit to feed a small army.</p>
         
     
-    <h2>Ingridents used to make kitfo</h2>
+    <h2>Ingridents</h2>
         <ul>
             <li>Whole chicken cut in pieces or chicken thighs</li>
             <li>Clarified butter (Cardamom Infused Butter)</li>
