--- a/recipes/kitfo.html
+++ b/recipes/kitfo.html
@@ -12,7 +12,7 @@
         <p>Kitfo, Ethiopian Cuisine consists of minced raw beef, marinated in mitmita (a chili powder-based spice blend) and niter kibbeh (a clarified butter infused with herbs and spices).</p>
         <p>Kitfo cooked lightly rare is known as kitfo leb leb. Kitfo is often served alongside-sometimes mixed with- a mild cheese called ayibe or cooked greens known as gomen. In many parts of Ethiopia, kitfo is served with injera, a flatbread made from teff, although in traditional Gurage cuisine, one would use kocho, a thick flatbread made from the ensete plant. An ensete leaf may be used as a garnish. Though not considered a delicacy, kitfo is generally held in high regard.</p>
     
-    <h2>Ingridents used to make kitfo</h2>
+    <h2>Ingridents</h2>
         <ul>
             <li>2 lbs top round beef (freshly cut)</li>
             <li>6 teaspoons ground cayenne pepper (Mitmita*)</li>
