--- a/recipes/shirowet.html
+++ b/recipes/shirowet.html
@@ -12,7 +12,7 @@
     <h2>Shiro Wet (Ethiopian Traditional Food)</h2>
         <p>Shiro wat is an Ethiopian stew, made from chicken and/or bean flour. Shiro refers to the beans, and wat means stew. It's eaten with injera, Ethiopia's famous fermented flatbread, and can be found in almost every restaurant across the entire country.</p>
     
-    <h2>Ingridents used to make kitfo</h2>
+    <h2>Ingridents</h2>
         <ul>
             <li>Red onions</li>
             <li>Garlic</li>
