--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <ul>
             <li><a href="./recipes/kitfo.html">Kitfo</a></li>
             <li><a href="./recipes/dorowet.html">Doro wet</a></li>
-            <li><a href="./recipes/shirowet.html">Shir  wet</a></li>
+            <li><a href="./recipes/shirowet.html">Shiro  wet</a></li>
         </ul>
 
 </body>
